# BeaverEngine

./: .gitignore  BeaverEngine.sln  CMakeLists.txt  README.md
BeaverEngine/: BeaverEngine.vcxproj  BeaverEngine.vcxproj.filters  CMakeLists.txt
BeaverEngine/include/BeaverEngine/: BeaverEngine.h  Entity.h  Game.h  Scene.h  TypeDef.h  Window.h  std.h
BeaverEngine/include/BeaverEngine/Component/: AudioManagerComponent.h  CircleColliderComponent.h  ColliderComponent.h  CollisionComponent.h  Component.h  DisplayComponent.h  InputManagerComponent.h  IntGridColliderComponent.h  LayerComponent.h  LevelComponent.h  LogicComponent.h  ManagerComponent.h  MousePointerComponent.h  ParcicleComponent.h  ParticleEmitterComponent.h  PositionComponent.h  RectangleColliderComponent.h  SpriteComponent.h  SpriteRendererComponent.h  TextureManagerComponent.h  View2DComponent.h  ViewManagerComponent.h  WindowComponent.h  WindowManagerComponent.h
BeaverEngine/include/BeaverEngine/Core/: Debug.h  Entity.h  Game.h  GlobalConstants.h  KeyCode.h  Renderer.h  Scene.h  TypeDef.h  std.h
BeaverEngine/include/BeaverEngine/DataStruct/: Timing.h
BeaverEngine/include/BeaverEngine/Enums/: AudioState.h  E_RenderDimension.h  RenderDimension.h
BeaverEngine/include/BeaverEngine/Functions/: Math.h  components.h
BeaverEngine/include/BeaverEngine/Platform/: PlatformMacros.h
BeaverEngine/include/BeaverEngine/Platform/Desktop/: DesktopAudioManagerImpl.h  DesktopAudioSystemImpl.h  DesktopBufferImpl.h  DesktopControllerRumble.h  DesktopMusicPlayer.h  DesktopRenderer.h  DesktopSoundBuffer.h  DesktopSoundDevice.h  DesktopSoundSource.h  DesktopTexture2D.h  DesktopWindow.h
BeaverEngine/include/BeaverEngine/Platform/Web/: WebBufferImpl.h  WebControllerRumble.h  WebTexture2D.h  WebWindow.h
BeaverEngine/include/BeaverEngine/Platform/Windows/: WindowsWindow.h
BeaverEngine/include/BeaverEngine/System/: AudioSystem.h  AudioSystemImpl.h  ColliderSystem.h  DisplaySystem.h  EntitySystem.h  InputSystem.h  LogicSystem.h  ManagerSystem.h  ParticleSystem.h  System.h  TextureSystem.h  ViewSystem.h  WindowSystem.h
BeaverEngine/include/BeaverEngine/Tools/: LdtkLevelComponent.h
BeaverEngine/include/BeaverEngine/Utils/: Array2D.h  AudioData.h  AudioManagerImpl.h  AudioPlayer.h  Buffer.h  BufferImpl.h  CollisionData.h  ControllerRumble.h  Math.h  MusicPlayer.h  Particle.h  Sound.h  SoundPlayer.h  Texture.h  Texture2D.h  Timer.h  Timing.h  Vertex.h  View2D.h  Window.h
BeaverEngine/src/: Entity.cpp  Game.cpp  Scene.cpp  Window.cpp
BeaverEngine/src/BeaverEngine/Component/: AudioManagerComponent.cpp  CircleColliderComponent.cpp  Component.cpp  DisplayComponent.cpp  IntGridColliderComponent.cpp  LayerComponent.cpp  LevelComponent.cpp  LogicComponent.cpp  MousePointerComponent.cpp  ParcicleEmitterComponent.cpp  ParticleEmitterComponent.cpp  PositionComponent.cpp  RectangleColliderComponent.cpp  SpriteComponent.cpp  SpriteRendererComponent.cpp  WindowManagerComponent.cpp
BeaverEngine/src/BeaverEngine/Core/: Entity.cpp  Game.cpp  Scene.cpp  TypeDef.cpp  Window.cpp
BeaverEngine/src/BeaverEngine/Platform/Desktop/: DesktopAudioManagerImpl.cpp  DesktopAudioSystemImpl.cpp  DesktopBufferImpl.cpp  DesktopControllerRumble.cpp  DesktopMusicPlayer.cpp  DesktopRenderer.cpp  DesktopSoundBuffer.cpp  DesktopSoundDevice.cpp  DesktopSoundSource.cpp  DesktopTexture2D.cpp  DesktopWindow.cpp  DesktopWindowSystem.cpp
BeaverEngine/src/BeaverEngine/Platform/Web/: WebBufferImpl.cpp  WebControllerRumble.cpp  WebTexture2D.cpp  WebWindow.cpp
BeaverEngine/src/BeaverEngine/System/: AudioSystem.cpp  ColliderSystem.cpp  DisplaySystem.cpp  EntitySystem.cpp  InputSystem.cpp  LogicSystem.cpp  ParticleSystem.cpp  TextureSystem.cpp  ViewSystem.cpp  WindowSystem.cpp
BeaverEngine/src/BeaverEngine/Tools/: LdtkLevelComponent.cpp
BeaverEngine/src/BeaverEngine/Utils/: AudioData.cpp  Math.cpp  Particle.cpp  Sound.cpp  Texture2D.cpp  Timer.cpp  View2D.cpp
BeaverEngine/src/Component/: ColliderComponent.cpp  DisplayComponent.cpp  InputManagerComponent.cpp  LogicComponent.cpp  ManagerComponent.cpp  RectangleColliderComponent.cpp  SpriteComponent.cpp
BeaverEngine/src/Core/: Entity.cpp  Game.cpp  Scene.cpp
BeaverEngine/src/Platform/Desktop/: DesktopRenderer.cpp  DesktopTexture2D.cpp  DesktopWindow.cpp
BeaverEngine/src/Platform/Windows/: WindowsWindow.cpp
BeaverEngine/src/System/: DisplaySystem.cpp  EntitySystem.cpp  LogicSystem.cpp  ManagerSystem.cpp  System.cpp
BeaverEngine/src/Utils/: Buffer.cpp  View2D.cpp
SandBox/: CMakeLists.txt  Game.cpp  Game.h  SandBox.vcxproj  SandBox.vcxproj.filters  TestColliderComponent.h  TestComponent.cpp  main.cpp
SandBox/data/levels/Level_0/: IntGrid.csv
SandBox/data/scene/: default_scene.yaml
SandBox/data/templates/: LdtkLevel.yaml  SpriteComponent.yaml  TestEntity.yaml
SandBox/include/: Game.h  TestColliderComponent.h  TestComponent.h  TestEntitySpawnerComponent.h
SandBox/src/: Game.cpp  TestColliderComponent.cpp  TestComponent.cpp  TestEntitySpawnerComponent.cpp  main.cpp
data/scene/: default_scene.yaml  (+1 more)
doc/: sprite.txt
examples/BrickBreaker/: CMakeLists.txt
examples/BrickBreaker/data/levels/DefaultMap/: IntGrid.csv
examples/BrickBreaker/data/scene/: default_scene.yaml
examples/BrickBreaker/include/: Brick.h  BrickBreaker.h
examples/BrickBreaker/src/: Ball.cpp  Brick.cpp  BrickBreaker.cpp  Paddle.cpp
examples/TicTacToe/: CMakeLists.txt
examples/TicTacToe/data/levels/DefaultMap/: data.json
examples/TicTacToe/data/scene/: default_scene.yaml
examples/TicTacToe/data/shaders/Desktop/: 2d_render.frag
examples/TicTacToe/data/templates/: Brick.yaml
examples/TicTacToe/include/: Ball.h  Paddle.h
examples/TicTacToe/src/: BrickBreaker.cpp  main.cpp
examples/WindowPong/: CMakeLists.txt
examples/WindowPong/data/scene/: default_scene.yaml
examples/WindowPong/data/shaders/Desktop/: 2d_render.vert
examples/WindowPong/data/sprites/: brick.yaml
examples/WindowPong/include/: Ball.h  Paddle.h  WindowPong.h
examples/WindowPong/src/: Ball.cpp  Paddle.cpp  WindowPong.cpp  main.cpp
(+26 files in other folders)
